test/tests/compiler/14_pointers/invalid_types/extra_credit/compound_multiply_pointer.plx
#  A pointer can't appear as the left or right operand
#  * of the *=, /=, or %= operator
#  
pub fn main(none) i32 {
    x: *i32 = 0
    x *= 2
    return false
}
